package Game.CombatSystem;

public enum BuffType
{
    /**流血*/
    BLEED,
    /**中毒*/
    POISON;
}
